# positive-or-negative

./: .gitignore  pyproject.toml  requirements.txt
src/: analysis_json.py  analysis_tweets.py  define_client.py  get_tweet.py  judge.py  main.py  oseti_sample.py  period_judge.py  specify_the_period.py  text_shaping.py
tests/: test_positive_or_negative.py
