[tool.poetry]
name = "positive-or-negative"
version = "0.1.0"
description = ""
authors = ["Shin <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
oseti = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
