[tool.poetry]
name = "positive-or-negative"
version = "0.1.0"
description = ""
authors = ["Shin <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
oseti = "^0.2"
python-dotenv = "^0.19.0"
oauth2 = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
taskipy = "^1.8.2"
pycodestyle = "^2.7.0"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
# Run local
# poetry run main start
main = "python src/main.py"
example = "python src/oseti_sample.py"
